--- a/.gitignore
+++ b/.gitignore
@@ -137,10 +137,8 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# csv files
-dados/*.csv
-dados/bruto/*.csv
-dados/processado/*.csv	
-resultados/*.csv
+#  outros files
+.google-cookie
+
 
 
