--- a/.gitignore
+++ b/.gitignore
@@ -143,12 +143,15 @@ cython_debug/
 # csv files
 *.txt
 *.csv
-resultados/basil_io/*.csv
-resultados/corona_feed/*.txt
-resultados/corona_feed/*.csv
-resultados/jhon_hopkins/*.csv
+resultados/basil-io/*.csv
+resultados/corona-feed/*.txt
+resultados/corona-feed/*.csv
+resultados/jhon-hopkins/*.csv
 resultados/cnn-articles/*.txt
 resultados/cnn-articles/*.csv
+resultados/google/*.txt
+resultados/google/*.csv
+resultados/worldometer/*.csv
 
 #  outros files
 .google-cookie
