--- a/environment.yml
+++ b/environment.yml
@@ -71,6 +71,7 @@ dependencies:
   - pyzmq=18.1.1
   - queuelib=1.5.0
   - requests=2.23.0
+  - selenium=3.141.0
   - service_identity=18.1.0
   - setuptools=46.0.0
   - six=1.14.0
